@@ -81,9 +81,7 @@ class TelemetricsHandler {
   velocypack::Builder _telemetricsFetchedInfo;
 
   std::thread _telemetricsThread;
-#ifdef ARANGODB_ENABLE_MAINTAINER_MODE
-  bool const _sendToEndpoint;
-#endif
+  bool _sendToEndpoint;
 };
 
 }  // namespace arangodb
