@@ -36,6 +36,9 @@ if (getOptions === true) {
 
 const jsunity = require('jsunity');
 const internal = require('internal');
+const toArgv = require('internal').toArgv;
+const fs = require('fs');
+const pu = require('@arangodb/testutils/process-utils');
 const FoxxManager = require('@arangodb/foxx/manager');
 const path = require('path');
 const basePath = path.resolve(internal.pathForTesting('common'), 'test-data', 'apps', 'redirect');
@@ -49,6 +52,7 @@ let smartGraph = null;
 if (isEnterprise) {
   smartGraph = require("@arangodb/smart-graph");
 }
+const arangosh = pu.ARANGOSH_BIN;
 const userName = "abc";
 const databaseName = "databaseTest";
 const cn = "testCollection";
@@ -362,6 +366,7 @@ function telemetricsShellReconnectSmartGraphTestsuite() {
         }
       }
     },
+
   };
 }
 
@@ -481,6 +486,51 @@ function telemetricsShellReconnectGraphTestsuite() {
         }
       }
     },
+
+    testTelemetricsShellExecuteScriptLeave: function () {
+      // this is for when the user logs into the shell to run a script and then leaves the shell immediately. The shell
+      // should not hang because telemetrics is still in progress.
+      // The telemetrics process should be transparent to the user and not influence user experience.
+      // The shell should be closed as soon as the script executes despite of telemetrics being in progress, not
+      // mattering whether telemetrics is still in progress by fetching info from servers or by sending the info to
+      // the endpoint.
+      // It could happen, for example, that the script executes, and telemetrics is still in progress, the data is about
+      // to be sent to the warehouse and could hang until a connection timeout (30s) is reached. Therefore, the
+      // connecting socket is made non-blocking to be able to abort the request.The shell should be closed immediately
+      // as it would behave had the telemetrics process not taken place.
+      let file = fs.getTempFile() + "-telemetrics";
+      fs.write(file, `(function() { const x = 0;})();`);
+      let options = internal.options();
+      let endpoint = arango.getEndpoint().replace(/\+vpp/, '').replace(/^http:/, 'tcp:').replace(/^https:/, 'ssl:').replace(/^vst:/, 'tcp:').replace(/^h2:/, 'tcp:');
+      const args = {
+        'javascript.startup-directory': options['javascript.startup-directory'],
+        'server.endpoint': endpoint,
+        'server.username': arango.connectedUser(),
+        'server.password': '',
+        'javascript.execute': file,
+        'client.failure-points': 'startTelemetricsForTest',
+      };
+      const argv = toArgv(args);
+
+      for (let o in options['javascript.module-directory']) {
+        argv.push('--javascript.module-directory');
+        argv.push(options['javascript.module-directory'][o]);
+      }
+
+      let result = internal.executeExternal(arangosh, argv, false /*usePipes*/);
+      assertTrue(result.hasOwnProperty('pid'));
+      let numSecs = 0.5;
+      let status = {};
+      while (true) {
+        status = internal.statusExternal(result.pid);
+        if (status.status === "TERMINATED" || numSecs >= 16) {
+          break;
+        }
+        internal.sleep(numSecs);
+        numSecs *= 2;
+      }
+      assertEqual(status.status, "TERMINATED", "couldn't leave shell immediately after executing script");
+    }
   };
 }
 
@@ -800,7 +850,6 @@ function telemetricsSendToEndpointRedirectTestsuite() {
       const telemetrics = getTelemetricsSentToEndpoint();
       assertForTelemetricsResponse(telemetrics);
     },
-
   };
 }
 
@@ -824,7 +873,7 @@ function telemetricsEnhancingOurCalm() {
       let successful = 0;
       let failed = 0;
       for (let i = 0; i < n; ++i) {
-        let res = arango.GET_RAW("/_admin/telemetrics", { "user-agent": "arangosh/3.11.0" });
+        let res = arango.GET_RAW("/_admin/telemetrics", {"user-agent": "arangosh/3.11.0"});
         if (res.code === 200) {
           ++successful;
         }
